--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
       {
         "src": "manage.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" }
+        "config": { "maxLambdaSize": "15mb" },
+        "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
       },
       {
         "src": "staticfiles/**/*",
