--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,7 @@
       {
         "src": "manage.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" },
-        "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
-      },
+        "config": { "maxLambdaSize": "15mb" }      },
       {
         "src": "staticfiles/**/*",
         "use": "@vercel/static"
