--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,10 @@
     "version": 2,
     "builds": [
       {
-        "src": "manage.py",
+        "src": "learn_clocks/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" }      },
+        "config": { "maxLambdaSize": "15mb" }      
+      },
       {
         "src": "staticfiles/**/*",
         "use": "@vercel/static"
@@ -17,7 +18,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "manage.py"
+        "dest": "learn_clocks/wsgi.py"
       }
     ]
   }
